<resources>
    <string name="app_name">視障者取物引導</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_resetStatus">重新尋找</string>
    <string name="txt_accelerometer">加速度計</string>
    <string name="txt_linear_accelerometer">直線加速度計</string>
    <string name="txt_gravity">重力</string>
    <string name="txt_magnetic">地磁</string>
    <string name="txt_gyroscope">陀螺儀</string>
    <string name="txt_rotation_vector">旋轉向量</string>
    <string name="txt_calibSensor">校正感測器</string>
    <string name="txt_info">現在數值:</string>
    <string name="txt_pitch">仰角</string>
    <string name="txt_roll">側傾角</string>
    <string name="txt_nowdirection">現在方位</string>
    <string name="txt_hintCalib">請將手機繞八以校正方位，將自動返回上一個頁面</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_eastnorth">EN</string>
    <string name="sotw_westnorth">WN</string>
    <string name="sotw_eastsouth">ES</string>
    <string name="sotw_westsouth">WS</string>

    <!--給spinner Select 1 -->
    <string-array name="SelectItem">
        <item>None</item>
        <item>雨傘</item>
        <item>包</item>
        <item>瓶子</item>
        <item>杯子</item>
        <item>叉子</item>
        <item>湯匙</item>
        <item>碗</item>
        <item>椅子</item>
        <item>遙控器</item>
        <item>手機</item>
        <item>微波爐</item>
        <item>冰箱</item>
        <item>延長線</item>
        <item>螢幕</item>
        <item>滑鼠</item>
        <item>鍵盤</item>
        <item>冷氣</item>
    </string-array>
</resources>