<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            tools:context=".camera.CameraActivity">

        </FrameLayout>

        <TextView
            android:id="@+id/modeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="int8 320x320"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewFPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="FPS:"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewLatency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Inference: xxms Postprocess: yyms"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/conf_TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Confidence Threshold"
            android:textColor="#000000"/>

        <SeekBar
            android:id="@+id/conf_seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/iou_TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="IoU Threshold"
            android:textColor="#000000"/>

        <SeekBar
            android:id="@+id/iou_seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickDirection"
                android:text="@string/txt_nowdirection"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_magneticSTA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_magnetic"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tv_item"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="none"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerItem"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/SelectItem" />

            <Button
                android:id="@+id/bt_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickReset"
                android:text="@string/txt_resetStatus" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
